[package]
name = "timeline-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou_timeline = { path = ".." }
eframe = "0.32"
egui = "0.32"
chrono = "0.4"
dirs = "5.0"

[[bin]]
name = "timeline-demo"
path = "src/main.rs"

[[bin]]
name = "timeline-demo-dock"
path = "src/main_dock.rs"

[workspace]