[package]
name = "timeline-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou_timeline = { path = ".." }
eframe = "0.32"
egui = "0.32"
egui_material_icons = "0.4"
chrono = "0.4"
dirs = "5.0"
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
rfd = "0.15"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
egui_kittest = "0.32"

[[bin]]
name = "timeline-demo"
path = "src/main.rs"

[[bin]]
name = "timeline-demo-dock"
path = "src/main_dock.rs"

[workspace]